Fix overflow on autoplay overlay on mobile

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -251,6 +251,10 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     max-width: 100%;
+    margin-bottom: 0 !important;
+  }
+  .autoplay-countdown__counter {
+    margin-top: var(--spacing-xxs) !important;
   }
 }
 
